Updated project-html1.html with new modifications

--- a/html-project1.html
+++ b/html-project1.html
@@ -8,8 +8,8 @@
 <body>
     <header style="background-color: rgb(139, 138, 138); ">
         <nav>
-            
-                <a href="#home">Home</a> &nbsp; &nbsp;
+            <!--navigation between the sections-->
+                <a href="#home">Home</a> &nbsp; &nbsp; 
                 <a href="#about">About</a>&nbsp; &nbsp;
                 <a href="#resume">Projects</a>&nbsp; &nbsp;
                 <a href="#contact">Contact</a>
@@ -19,6 +19,7 @@
         <h1>Portfolio</h1>
     </header>
 <br><br><br>
+<!--Home section-->
     <section id="home">
         <div>
             <h1>What is Web Development?</h1>
@@ -40,6 +41,7 @@
     </section>
     <hr>
 <br><br><br>
+<!--about section-->
     <section id="about">
         <h2>Hi, My Name is <i><strong>Wissal</strong></i></h2>
         <h4>I am a Computer Science student at the University of Boumerdes</h4>
@@ -57,7 +59,7 @@
                 <td>A car rental system</td>
             </tr>
             <tr>
-                <td><img style="height: 600px; width: 300px;" src="/photo_2024-06-19_12-23-42.jpg" alt=""></td>
+                <td><img style="height: 600px; width: 300px;" src="/bourse.jpg" alt=""></td>
                 <td><img style="height: 400px; width: 600px;" src="/homecezam.png" alt=""></td>
                 <td><img style="height: 400px; width: 400px;" src="/carsRent.PNG" alt=""></td>
             </tr>
